--- a/src/main/resources/fxml/FXMLPrincipal.fxml
+++ b/src/main/resources/fxml/FXMLPrincipal.fxml
@@ -65,7 +65,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Button layoutX="61.0" layoutY="14.0" mnemonicParsing="false" text="Relatórios de Check-Out" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
+                                    <Button fx:id="buttonShowReport" layoutX="61.0" layoutY="14.0" mnemonicParsing="false" text="Relatórios de Check-Out" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
                                  </children></AnchorPane>
                         </content>
                       </TitledPane>
