--- a/src/main/resources/fxml/FXMLPrincipal.fxml
+++ b/src/main/resources/fxml/FXMLPrincipal.fxml
@@ -73,7 +73,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Button layoutX="61.0" layoutY="14.0" mnemonicParsing="false" text="Reservas no Mês" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
+                                    <Button layoutX="61.0" layoutY="14.0" mnemonicParsing="false" onAction="#showPieChart" text="Reservas no Mês" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
                                     <Button layoutX="61.0" layoutY="57.0" mnemonicParsing="false" text="Valor Total No Mês" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
                                  </children></AnchorPane>
                         </content>
