--- a/src/main/resources/fxml/FXMLReservaCadastro.fxml
+++ b/src/main/resources/fxml/FXMLReservaCadastro.fxml
@@ -23,14 +23,14 @@
         <items>
           <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="303.0" prefWidth="381.0">
                <children>
-                  <Label layoutX="20.0" layoutY="145.0" text="Data Reserva" />
-                  <Label layoutX="14.0" layoutY="14.0" text="Cliente" />
-                  <Label layoutX="12.0" layoutY="76.0" text="Quarto" />
-                  <Label layoutX="149.0" layoutY="145.0" text="Data Entrada" />
-                  <Label layoutX="273.0" layoutY="145.0" text="Data Saída" />
+                  <Label layoutX="20.0" layoutY="145.0" text="Data Reserva *" />
+                  <Label layoutX="14.0" layoutY="14.0" text="Cliente *" />
+                  <Label layoutX="12.0" layoutY="76.0" text="Quarto *" />
+                  <Label layoutX="149.0" layoutY="145.0" text="Data Entrada *" />
+                  <Label layoutX="273.0" layoutY="145.0" text="Data Saída *" />
                   <Label layoutX="178.0" layoutY="76.0" text="Valor Diária" />
-                  <TextField fx:id="textValorDiaria" layoutX="178.0" layoutY="93.0" prefHeight="25.0" prefWidth="195.0" />
-                  <Label layoutX="14.0" layoutY="223.0" text="Motivo" />
+                  <TextField fx:id="textValorDiaria" editable="false" layoutX="178.0" layoutY="93.0" prefHeight="25.0" prefWidth="195.0" />
+                  <Label layoutX="14.0" layoutY="223.0" text="Motivo *" />
                   <TextField fx:id="textMotivo" layoutX="65.0" layoutY="219.0" prefHeight="25.0" prefWidth="306.0" />
                   <ChoiceBox fx:id="cbCliente" layoutX="15.0" layoutY="36.0" prefHeight="25.0" prefWidth="149.0" />
                   <ChoiceBox fx:id="cbQuarto" layoutX="13.0" layoutY="93.0" onAction="#changeValue" prefHeight="25.0" prefWidth="149.0" />
